This file documents the revision history for Perl web application WomenInBotany.

{{$NEXT}}

0.15      2014-09-09 12:25:09+02:00 Europe/Berlin

    - searching in list of botanist added  

0.14      2014-09-08 16:41:44+02:00 Europe/Berlin

    - table status added
    - field for internal notes in table botanists added

0.13      2014-09-07 16:07:26+02:00 Europe/Berlin

    - authentication support via LDAP  

0.01  2013-04-07 15:11:15+01:00 Europe/Berlin 

    - initial revision, generated by Catalyst